[package]
name = "lc-login"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sha3 = []
blake2 = []
sha512_t = []

[dependencies]
lazy_static="1.4.0"
install-dirs="0.2.1"
libc = "0.2.85"
fake-enum = "0.1.1"
openssl = "0.10.32"
bytemuck = {version="1.5.0",features=["derive"]}
zeroize = "1.2.0"
defer = "0.1.0"
itertools = "0.10.0"
clap = "2.33.3"
rpassword = "5.0.1"

[build-dependencies]
install-dirs={version="0.2.1",features=["serde"]}
serde = {version="1.0.123",features=["derive"]}
toml = "0.5.8"

[[bin]]
name = "su"
path="src/su.rs"

[[bin]]
name = "login"
path="src/login.rs"

[[bin]]
name = "passwd-convert"
path="src/passwd_convert.rs"

[[bin]]
name = "passwd"
path = "src/passwd.rs"

[lib]
name = "lc_login"

[package.metadata.install-targets.su]
mode="=rx,u+ws"